# fatima

./: README.md  pyproject.toml  qwen35-0.8b-math.py  qwen35_math_blindspots_colab.ipynb  qwen35_math_blindspots_colab.py
qwen35_math_output/: train.parquet
