[project]
name = "qwen35-math-blindspots"
version = "0.1.0"
description = "Collect first math mistakes from Qwen3.5-0.8B and export a Hub-friendly dataset"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.2",
  "transformers>=4.49.0",
  "datasets>=2.19.0",
  "accelerate>=0.34.0",
  "huggingface_hub>=0.30.0",
  "pyarrow>=15.0.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
